Fix T56915: Selectability in Solid Xray Mode

This was caused by the object center being selected by the wireframe pass.

The wireframe pass is now only drawn if we search for the nearest surface.
This makes all wire objects (like non-meshes objects) higher priority than
mesh surfaces.