source/blender/editors/space_view3d/view3d_view.c
@@ -1009,7 +1009,7 @@ int view3d_opengl_select(
 	}
 
 	/* If in xray mode, we select the wires in priority. */
-	if (v3d->shading.flag & V3D_XRAY_FLAG(v3d)) {
+	if ((v3d->shading.flag & V3D_XRAY_FLAG(v3d)) && use_nearest) {
 		/* We need to call "GPU_select_*" API's inside DRW_draw_select_loop
 		 * because the OpenGL context created & destroyed inside this function. */
 		struct DrawSelectLoopUserData drw_select_loop_user_data = {
